# pymol-cursor-mcp

./: .gitignore  INSTALL.md  LICENSE  README.md  pymol_mcp_server.py  pyproject.toml  requirements.txt  verify_stack.py
.cursor/: mcp.json  mcp.json.windows.example
.cursor/rules/: pymol-mcp-invoke.mdc  pymol-mcp.mdc
examples/: restore_pocket_labels.pml
scripts/: start_pymol_for_mcp.sh
